--- a/index.html
+++ b/index.html
@@ -6,13 +6,60 @@
     <script src='https://unpkg.com/maplibre-gl@2.1.7/dist/maplibre-gl.js'></script>
     <link href='https://unpkg.com/maplibre-gl@2.1.7/dist/maplibre-gl.css' rel='stylesheet' />
     <title>Voyages progressifs</title>
+
     <link rel="stylesheet" href="public/css/index.css">
 </head>
 
 <div class="home">
-    <div class="home-map"></div>
+    <div class="home-header">
+        <div class="home-header-container">
+
+            <h1 class="home-header-main">
+                Welcome to <span class="home-header-name">Les Voyages progressifs!</span>
+            </h1>
+            <p class="home-header-paragraph">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex
+                ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat
+                nulla pariatur.
+            </p>
+            <div class="home-header-button">Explore <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                    fill="currentColor" class="bi bi-arrow-down" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
+                </svg> </div>
+
+        </div>
+    </div>
+    <div class="home-explore">
+        <h2 class="home-explore-header">Explore</h2>
+
+
+        <div class="home-map">
+            <div class="home-explore-right">
+                <h1>Have a look inside!</h1>
+                <p class="home-explore-paragraph">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip
+                    ex
+                    ea commodo consequat.
+                </p>
+                <div class="home-explore-right-imgs">
+<img src="public/img/room-1.webp" alt=""><img src="public/img/room-2.jpg" alt=""><img src="public/img/room-3.jpg" alt=""><img src="public/img/room-4.jpg" alt=""><img src="public/img/room-5.jpg" alt="">
+                </div>
+            </div>
+        </div>
+        <!-- <div>aa</div> -->
+
+
+    </div>
 </div>
 
 <script src="src/components/map.js"></script>
+<script src="src/controllers/home.js"></script>
 
 </html>
