feat: added covid safety guidelines and footer

--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
     <div class="home-explore">
         <h2 class="home-explore-header">Explore</h2>
 
-
         <div class="home-map">
             <div class="home-explore-right">
                 <h1>Have a look inside!</h1>
@@ -49,17 +48,80 @@
                     ea commodo consequat.
                 </p>
                 <div class="home-explore-right-imgs">
-<img src="public/img/room-1.webp" alt=""><img src="public/img/room-2.jpg" alt=""><img src="public/img/room-3.jpg" alt=""><img src="public/img/room-4.jpg" alt=""><img src="public/img/room-5.jpg" alt="">
+                    <img src="public/img/room-1.webp" alt=""><img src="public/img/room-2.jpg" alt=""><img
+                        src="public/img/room-3.jpg" alt=""><img src="public/img/room-4.jpg" alt=""><img
+                        src="public/img/room-5.jpg" alt="">
                 </div>
             </div>
         </div>
-        <!-- <div>aa</div> -->
+    </div>
+
+    <div class="home-safety">
+        <h1 class="home-safety-header">Covid Safety Guidelines</h1>
+        <div class="home-safety-container">
+            <div class="home-safety-card">
+                <div class="home-safety-card-front">
+                    <img src="public/img/mask.svg" class="home-safety-card-front-img" alt="mask">
+                </div>
+
+                <div class="home-safety-card-back">
+                    <div class="home-safety-card-back-flexbox">
+
+                        <h2 class="home-safety-card-back-header">Mask Mandates</h2>
+                        <p class="home-safety-card-back-paragraph">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                            voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                        </p>
+                    </div>
+
+                </div>
+            </div>
+            <div class="home-safety-card">
+                <div class="home-safety-card-front">
+                    <img class="home-safety-card-front-img" src="public/img/vaccine.svg" alt="vaccine">
+                </div>
 
 
+                <div class="home-safety-card-back">
+                    <div class="home-safety-card-back-flexbox">
+                        <h2 class="home-safety-card-back-header">Vaccine Mandates</h2>
+                        <p class="home-safety-card-back-paragraph">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                            voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                        </p>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="home-safety-card">
+                <div class="home-safety-card-front">
+                    <img src="public/img/sanitizer.svg" class="home-safety-card-front-img" alt="sanitizer">
+                </div>
+
+                <div class="home-safety-card-back">
+                    <div class="home-safety-card-back-flexbox">
+                        <h2 class="home-safety-card-back-header">Regular Sanitization</h2>
+                        <p class="home-safety-card-back-paragraph">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                            voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
     </div>
 </div>
 
 <script src="src/components/map.js"></script>
 <script src="src/controllers/home.js"></script>
-
+<script src='src/components/footer.js'></script>
 </html>
