feat: added navigation

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 </head>
 
 <div class="home">
+
+    <div class="navbar">
+
+
+    </div>
     <div class="home-header">
         <div class="home-header-container">
 
@@ -124,4 +129,6 @@
 <script src="src/components/map.js"></script>
 <script src="src/controllers/home.js"></script>
 <script src='src/components/footer.js'></script>
+<script src='src/components/navigation.js'></script>
+
 </html>
