--- a/index.html
+++ b/index.html
@@ -23,12 +23,7 @@
                 Welcome to <span class="home-header-name">Les Voyages progressifs!</span>
             </h1>
             <p class="home-header-paragraph">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex
-                ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat
-                nulla pariatur.
+                We are hosting service available worldwide. We're everywhere you go with a variety of accommodations to suit your needs. This official website allows you to find and book hotels according to the amenities you have, at affordable prices, suitable for the pleasant climate we offer.
             </p>
             <div class="home-header-button">Explore <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                     fill="currentColor" class="bi bi-arrow-down" viewBox="0 0 16 16">
@@ -45,12 +40,7 @@
             <div class="home-explore-right">
                 <h1>Have a look inside!</h1>
                 <p class="home-explore-paragraph">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et
-                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip
-                    ex
-                    ea commodo consequat.
+                    These are the different types of accomodations that we offer :
                 </p>
                 <div class="home-explore-right-imgs">
                     <img src="public/img/room-1.webp" alt=""><img src="public/img/room-2.jpg" alt=""><img
@@ -74,10 +64,7 @@
 
                         <h2 class="home-safety-card-back-header">Mask Mandates</h2>
                         <p class="home-safety-card-back-paragraph">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                            voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                            The staff of the hotel wears masks and follow all the necessary norms to prevent the spread of air borne diseases. They follow social distancing. It is mandatory to wear masks in most countries, for more information, please contact the particular hotel you are going to stay in.
                         </p>
                     </div>
 
@@ -93,10 +80,7 @@
                     <div class="home-safety-card-back-flexbox">
                         <h2 class="home-safety-card-back-header">Vaccine Mandates</h2>
                         <p class="home-safety-card-back-paragraph">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                            voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                            All the staff has taken all the doses of vaccine for COVID-19. We, the hotel management and staff, are doing everything we can to ensure that nothing goes wrong. To live in the hotels, you need to show the COVID-19 Vaccine certification to gain entry.
                         </p>
                     </div>
 
@@ -112,10 +96,7 @@
                     <div class="home-safety-card-back-flexbox">
                         <h2 class="home-safety-card-back-header">Regular Sanitization</h2>
                         <p class="home-safety-card-back-paragraph">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                            voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                            The staff does regular sanitization and after every contact with a person, sanitizes hand to reduce transmission of germs from one person to another. There is always complete hygienic condition in the premises.
                         </p>
                     </div>
                 </div>
