feat: Completed logic

--- a/about.html
+++ b/about.html
@@ -21,11 +21,11 @@
             <h3 class="book-container-header">Select a package</h3>
             <div class="book-container-inner">
                 <div class="book-container-inner-packages">
-                    <input id="basic" type="radio" checked name="package"
+                    <input id="basic" type="radio" value="basic" checked name="package"
                         class="book-container-inner-packages-input book-container-inner-packages-basic">
-                    <input id="premium" type="radio" name="package"
+                    <input id="premium" type="radio" value="premium"  name="package"
                         class="book-container-inner-packages-input book-container-inner-packages-premium">
-                    <input id="luxurious" type="radio" name="package"
+                    <input id="luxurious" type="radio" value="luxurious" name="package"
                         class="book-container-inner-packages-input book-container-inner-packages-luxurious">
                     <label for="basic" class="book-container-inner-packages-each">
                         <h1 class="book-container-inner-packages-each-header">
@@ -127,15 +127,20 @@
                     <li>Sydney
                     <li>Tokyo
                     <li>Seoul
+                    <li>Honk Kong
                 </ul>
             </div>
         </div>
         <div class="home-about-map">
             <div class="home-map"></div>
-
         </div>
     </div>
-
+    <div class="home-news">
+        <h2 class="home-news-header">News From Our Hotels</h2>
+        <marquee loop direction="right" scrollamount="9">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </marquee>
+    </div>
 
     <div class="footer">
     </div>
