--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             <h3 class="book-container-header">Select a package</h3>
             <div class="book-container-inner">
                 <div class="book-container-inner-packages">
-                    <input id="basic" type="radio" checked name="package"
+                    <input id="basic" type="radio" value="basic" checked name="package"
                         class="book-container-inner-packages-input book-container-inner-packages-basic">
-                    <input id="premium" type="radio" name="package"
+                    <input id="premium" type="radio" value="premium"  name="package"
                         class="book-container-inner-packages-input book-container-inner-packages-premium">
-                    <input id="luxurious" type="radio" name="package"
+                    <input id="luxurious" type="radio" value="luxurious" name="package"
                         class="book-container-inner-packages-input book-container-inner-packages-luxurious">
                     <label for="basic" class="book-container-inner-packages-each">
                         <h1 class="book-container-inner-packages-each-header">
