feat: made the site responsive

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="book-container-inner-packages">
                     <input id="basic" type="radio" value="basic" checked name="package"
                         class="book-container-inner-packages-input book-container-inner-packages-basic">
-                    <input id="premium" type="radio" value="premium"  name="package"
+                    <input id="premium" type="radio" value="premium" name="package"
                         class="book-container-inner-packages-input book-container-inner-packages-premium">
                     <input id="luxurious" type="radio" value="luxurious" name="package"
                         class="book-container-inner-packages-input book-container-inner-packages-luxurious">
@@ -229,15 +229,10 @@
                     Welcome to <span class="home-header-name">Les Voyages progressifs!</span>
                 </h1>
                 <p class="about-header-main-content">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et
-                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip
-                    ex
-                    ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
-                    eu
-                    fugiat
-                    nulla pariatur.
+                    We are a hosting service available worldwide. No matter where you go, we can provide you with a
+                    range of accommodations to suit your needs. Besides that, our corporate goal is to spur progress in
+                    underprivileged communities and areas; therefore, more than 80% of our profits go towards providing
+                    education and internet access to impoverished communities.
                 </p>
                 <div class="about-header-button">
                     <p>Learn More</p> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
@@ -257,11 +252,12 @@
         <h1 class="about-donations-header">Change the world while having fun!</h1>
         <div class="about-donations-container">
             <p class="about-donations-container-paragraph">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                deserunt mollit anim id est laborum.
+                As aforementioned, we intend to utilize more than 80% of our earnings to sponsor impoverished
+                communities. Thus far, we have been able to assist disenfranchised communities in the sub-Saharan region
+                get access to the internet by getting them a stable internet connection and medium-end computers. The
+                internet is a crucial resource that can help spur education in said regions. You can be a part of our
+                mission by simply booking a fun vacation to the destination of your dreams!
+
             </p>
             <div class="about-donations-container-stats">
                 <div class="about-donations-container-stats-each">
@@ -537,4 +533,3 @@
 <script src="src/components/modal.js"></script>
 
 </html>
-
