feat: added meta tags

--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
     <script src='https://unpkg.com/maplibre-gl@2.1.7/dist/maplibre-gl.js'></script>
     <link href='https://unpkg.com/maplibre-gl@2.1.7/dist/maplibre-gl.css' rel='stylesheet' />
     <title>Voyages progressifs</title>
-
+    <meta name="description" content="We are a hosting service available worldwide. No matter where you go, we can provide you with a
+    range of accommodations to suit your needs. Besides that, our corporate goal is to spur progress in
+    underprivileged communities and areas; therefore, more than 80% of our profits go towards providing
+    education and internet access to impoverished communities.">
+    <meta name="og:description" content="We are a hosting service available worldwide. No matter where you go, we can provide you with a
+    range of accommodations to suit your needs. Besides that, our corporate goal is to spur progress in
+    underprivileged communities and areas; therefore, more than 80% of our profits go towards providing
+    education and internet access to impoverished communities.">
+    <link rel="icon" href="public/icon/favicon.ico">
+    <meta name="og:image" content="pubic/icon/favicon.ico">
     <link rel="stylesheet" href="public/css/index.css">
 </head>
 
@@ -451,10 +460,11 @@
 
                         <h2 class="home-safety-card-back-header">Mask Mandates</h2>
                         <p class="home-safety-card-back-paragraph">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                            voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                            The hotel staff wears masks and follow all the necessary norms to prevent the spread
+                            of air borne diseases. They follow social distancing. It is mandatory to wear masks in most
+                            countries, for more information, please contact the particular hotel you are going to stay
+                            in.
+
                         </p>
                     </div>
 
@@ -470,10 +480,11 @@
                     <div class="home-safety-card-back-flexbox">
                         <h2 class="home-safety-card-back-header">Vaccine Mandates</h2>
                         <p class="home-safety-card-back-paragraph">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                            voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                            All the staff has taken all the doses of the COVID-19 vaccine. We, the hotel management and
+                            staff, are doing everything we can to ensure that nothing goes wrong. To be eligible for a
+                            stay in the hotels,
+                            you need to show your COVID-19 Vaccination certificate.
+
                         </p>
                     </div>
 
@@ -489,10 +500,11 @@
                     <div class="home-safety-card-back-flexbox">
                         <h2 class="home-safety-card-back-header">Regular Sanitization</h2>
                         <p class="home-safety-card-back-paragraph">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                            voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                            The staff does regular sanitization, and after every contact with a person, sanitizes hand
+                            to
+                            reduce transmission of germs from one person to another. There is always complete hygienic
+                            condition in the premises.
+
                         </p>
                     </div>
                 </div>
