feat: added favicon

--- a/index.html
+++ b/index.html
@@ -6,16 +6,13 @@
     <script src='https://unpkg.com/maplibre-gl@2.1.7/dist/maplibre-gl.js'></script>
     <link href='https://unpkg.com/maplibre-gl@2.1.7/dist/maplibre-gl.css' rel='stylesheet' />
     <title>Voyages progressifs</title>
-    <meta name="description" content="We are a hosting service available worldwide. No matter where you go, we can provide you with a
-    range of accommodations to suit your needs. Besides that, our corporate goal is to spur progress in
-    underprivileged communities and areas; therefore, more than 80% of our profits go towards providing
-    education and internet access to impoverished communities.">
-    <meta name="og:description" content="We are a hosting service available worldwide. No matter where you go, we can provide you with a
-    range of accommodations to suit your needs. Besides that, our corporate goal is to spur progress in
-    underprivileged communities and areas; therefore, more than 80% of our profits go towards providing
-    education and internet access to impoverished communities.">
+    <meta name="og:title" content="Voyages progressifs">
+    <meta name="description"
+        content="We are a hosting service available worldwide. No matter where you go, we can provide you with a range of accommodations to suit your needs. Besides that, our corporate goal is to spur progress in underprivileged communities and areas; therefore, more than 80% of our profits go towards providing education and internet access to impoverished communities.">
+    <meta name="og:description"
+        content="We are a hosting service available worldwide. No matter where you go, we can provide you with a range of accommodations to suit your needs. Besides that, our corporate goal is to spur progress in underprivileged communities and areas; therefore, more than 80% of our profits go towards providing education and internet access to impoverished communities.">
     <link rel="icon" href="public/icon/favicon.ico">
-    <meta name="og:image" content="pubic/icon/favicon.ico">
+    <meta name="og:image" content="icon.png">
     <link rel="stylesheet" href="public/css/index.css">
 </head>
 
