--- a/about.html
+++ b/about.html
@@ -6,16 +6,13 @@
     <script src='https://unpkg.com/maplibre-gl@2.1.7/dist/maplibre-gl.js'></script>
     <link href='https://unpkg.com/maplibre-gl@2.1.7/dist/maplibre-gl.css' rel='stylesheet' />
     <title>Voyages progressifs</title>
-    <meta name="description" content="We are a hosting service available worldwide. No matter where you go, we can provide you with a
-    range of accommodations to suit your needs. Besides that, our corporate goal is to spur progress in
-    underprivileged communities and areas; therefore, more than 80% of our profits go towards providing
-    education and internet access to impoverished communities.">
-    <meta name="og:description" content="We are a hosting service available worldwide. No matter where you go, we can provide you with a
-    range of accommodations to suit your needs. Besides that, our corporate goal is to spur progress in
-    underprivileged communities and areas; therefore, more than 80% of our profits go towards providing
-    education and internet access to impoverished communities.">
+    <meta name="og:title" content="Voyages progressifs">
+    <meta name="description"
+        content="We are a hosting service available worldwide. No matter where you go, we can provide you with a range of accommodations to suit your needs. Besides that, our corporate goal is to spur progress in underprivileged communities and areas; therefore, more than 80% of our profits go towards providing education and internet access to impoverished communities.">
+    <meta name="og:description"
+        content="We are a hosting service available worldwide. No matter where you go, we can provide you with a range of accommodations to suit your needs. Besides that, our corporate goal is to spur progress in underprivileged communities and areas; therefore, more than 80% of our profits go towards providing education and internet access to impoverished communities.">
     <link rel="icon" href="public/icon/favicon.ico">
-    <meta name="og:image" content="pubic/icon/favicon.ico">
+    <meta name="og:image" content="icon.png">
     <link rel="stylesheet" href="public/css/index.css">
 </head>
 
@@ -32,7 +29,7 @@
                 <div class="book-container-inner-packages">
                     <input id="basic" type="radio" value="basic" checked name="package"
                         class="book-container-inner-packages-input book-container-inner-packages-basic">
-                    <input id="premium" type="radio" value="premium"  name="package"
+                    <input id="premium" type="radio" value="premium" name="package"
                         class="book-container-inner-packages-input book-container-inner-packages-premium">
                     <input id="luxurious" type="radio" value="luxurious" name="package"
                         class="book-container-inner-packages-input book-container-inner-packages-luxurious">
@@ -147,7 +144,11 @@
     <div class="home-news">
         <h2 class="home-news-header">News From Our Hotels</h2>
         <marquee loop direction="left" scrollamount="9">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            anim id est laborum.
         </marquee>
     </div>
 
