feat: completed site

--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
                             luxurious
                         </h1>
                         <p class="book-container-inner-packages-each-para">
-                            Entails of everything that the premium packages has, as well as access to extra amenities
+                            Entails of everything that the premium package has, as well as access to extra amenities
                             such as the sports facility(in limited regions), a taxi service, helicopter
                             rides and city tour services. All at just $300 per week.
 
@@ -97,22 +97,22 @@
         <div class="home-about-container">
             <div class="home-about-left">
                 <h2 class="home-about-header">About Us</h2>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex
-                ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat
-                nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                mollit
-                anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
-                in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur
-                adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-                sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                Les Voyages progressifs is an organization that aims to provide an exquisite and diverse travel
+                experience, all while helping impoverished people. We have hotels in 18 locations in 11 countries: The
+                United States Of America, Canada, Ireland, The United Kingdom, France, Germany, Norway, Australia,
+                Japan, South Korea, and China. Some of these hotels—namely New York, Las Vegas, San Francisco, and
+                Toronto—have an exclusive amenity - a sports facility. The facility comes included in the luxurious
+                package without an extra charge. There are multiple packages for you to choose from: a basic package, A
+                premium package, and a luxurious package. The basic package includes the following: A 2,000 square feet
+                living area that includes a bedroom, a spacious living room, a dining room, an entertainment room, and
+                two bathrooms, all at just $100 per week. The premium package entails the following: a 3,000 square feet
+                living area that includes two bedrooms, a spacious living room, a dining room, an entertainment room,
+                two bathrooms, and access to the pool, all at just $180 per week. The luxurious package entails the
+                following: everything that the premium package has, as well as access to extra amenities such as the
+                sports facility(in limited regions), a taxi service, helicopter rides, and city tour services, all at
+                just $300 per week. We have pledged to spend more than 80% of our profits(after employee salaries) to
+                help impoverished areas. Check out the home page to get more details on donations.
+
             </div>
             <div class="home-about-right">
                 <h2 class="home-about-header">You can find our hotels in the following cities:</h2>
