--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             luxurious
                         </h1>
                         <p class="book-container-inner-packages-each-para">
-                            Entails of everything that the premium packages has, as well as access to extra amenities
+                            Entails of everything that the premium package has, as well as access to extra amenities
                             such as the sports facility(in limited regions), a taxi service, helicopter
                             rides and city tour services. All at just $300 per week.
 
@@ -88,18 +88,21 @@
                 <div class="about-modals-each-content">
                     <div class="about-modals-each-paragraph">
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore
-                            et
-                            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                            ut
-                            aliquip
-                            ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                            cillum
-                            dolore eu
-                            fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-                            officia
-                            deserunt mollit anim id est laborum.
+                            Following are a few of the Indian Dishes that we serve.
+                            Gulab jamun is an Indian dessert of fried dough balls that are soaked in a sweet, sticky
+                            sugar syrup. As per tradition, the syrup has a delicate rose flavour: Gulab means 'rose
+                            water' and jamun refers to a berry of a similar size and colour. It is a milk based sweet.
+                            Paneer Kulcha is a North Indian food dish, served hot. It contains Cottage Cheese pieces
+                            with Gravy consisting of numerous spices which give a tangy taste. Kulcha is a flatbread
+                            which contain floor, sometimes stuffing, and is layered with butter. This food item leaves a
+                            really good taste in mouth. The Kulcha is cooked in earthen clay oven, giving it a unique
+                            taste. It is a notorious dish all over the Indian Subcontinent.
+                            A dosa is a cooked flat thin layered rice batter, originating from the South India, made
+                            from a fermented batter. Its main constituents are rice and black gram base together in a
+                            fine, smooth batter with a dash of salr. Traditionally, dosas are served hot along with
+                            sambar, a filling of potatoes, and chutney. They can be consumed with idli podi as well.
+                            Dosas are a typical part of the Southern Indian and Sri Lankan Tamil diets, but the dish is
+                            now popular each over the Indian Subcontinent.
                         </p>
 
                     </div>
@@ -125,18 +128,15 @@
                 <div class="about-modals-each-content">
                     <div class="about-modals-each-paragraph">
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore
-                            et
-                            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                            ut
-                            aliquip
-                            ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                            cillum
-                            dolore eu
-                            fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-                            officia
-                            deserunt mollit anim id est laborum.
+                            Following are a few of the Chinese Dishes that we serve. Peking roasted duck is a famous
+                            chinese food item made since imperial times. It is characterized by its thin crispy skin.
+                            The authentic versions of the dish has mostly skin and less amount of meat. It additionally
+                            makes use of spring onion and hoisin sauce.
+                            DDumpling is China`s oldest conventional pasta, derived from the town of nanyang. I. It is a
+                            spring festival food and it is a folk tradition to eat it. Their taste depends upon filling,
+                            but they are great to eat regardless of filling. Wonton soup is a standard of Chinese
+                            cuisine and made from seasoned chicken broth with filled wontons. Wontons are an Asian
+                            equivalent of ravioli or tortellini when they are folded around a spiced meat mixture.
                         </p>
 
                     </div>
@@ -162,18 +162,16 @@
                 <div class="about-modals-each-content">
                     <div class="about-modals-each-paragraph">
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore
-                            et
-                            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                            ut
-                            aliquip
-                            ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                            cillum
-                            dolore eu
-                            fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-                            officia
-                            deserunt mollit anim id est laborum.
+                            Following are few of the best Caribbean Dishes that we serve.
+                            Callaloo is a vegetable dish, which has many versions and is from the Carribean. The main
+                            ingredient is usually Amaranth, Taro leaves or Xanthosoma leaves. It is served everywhere in
+                            the world by us, but it has less availibility.
+                            Conch Fritters are famous dish of Bahamas in carribean. It uses conch meat with batter of
+                            flour and egg and is rare. We only serve it in Carribean countries due to its rarity. It has
+                            no fishy taste and is sweet and mild in flavour. Mofongo is a delicious dish that entices
+                            both the palate and fiery discussions about its origin. Mofongo is made with fried green
+                            plantains that are mashed with garlic and a mixture of meat or seafood, and is typically
+                            served with a side of fried meat and broth. It is mainly from Puerto Rico.
                         </p>
 
                     </div>
@@ -199,18 +197,16 @@
                 <div class="about-modals-each-content">
                     <div class="about-modals-each-paragraph">
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore
-                            et
-                            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                            ut
-                            aliquip
-                            ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                            cillum
-                            dolore eu
-                            fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-                            officia
-                            deserunt mollit anim id est laborum.
+                            Following are a few Korean Dishes that we serve. Kimchi, is a conventional Korean aspect
+                            dish of salted and fermented vegetables, which include napa cabbage and Korean radish. A
+                            extensive choice of seasonings are used, which include gochugaru, spring onions, garlic,
+                            ginger, and jeotgal, etc. Kimchi is likewise utilized in quite a few soups and stews.
+                            Chimaek is a korean food recipe often served as anju. It has fried chicken and beer in it.
+                            The Dish is highly popular as it is a result of the great barbecue techniques of korean
+                            cuisine. It is called Chimaek by Chi from Chicken and Maek from Korean word for Beer.
+                            Bulgogi literally means fire meat. It is made of thin slices of beef or pork grilled on
+                            barbecue or stove. It is made from Rib Eye Cut of meat. It is the most famous korean dish.
+                            Tasting sweet, salty and savory at the same time, this food product is a bliss.
                         </p>
 
                     </div>
@@ -514,7 +510,8 @@
                 <p class="home-explore-paragraph">
                     Our rooms(living areas) are quite spacious(ranging from 3,000sq to 4,000sq). The living areas
                     include either one or two bed rooms(depending on the package type), 2 bathrooms, a living room, a
-                    dining room, and an entertainment room(not available in the basic package). (click on a marker on the map to see pictures of that location)
+                    dining room, and an entertainment room(not available in the basic package). (click on a marker on
+                    the map to see pictures of that location)
                 </p>
                 <div class="home-explore-right-imgs">
                     <img src="public/img/room-1.webp" alt=""><img src="public/img/room-2.jpg" alt=""><img
